[gd_scene load_steps=2 format=3 uid="uid://map_node_scene"]

[ext_resource type="Script" path="res://tools/map_linker/map_node.gd" id="1_script"]

[node name="MapNode" type="Node2D"]
script = ExtResource("1_script")

[node name="TileContainer" type="Node2D" parent="."]

[node name="ObjectContainer" type="Node2D" parent="."]
z_index = 10

[node name="SelectionBorder" type="ReferenceRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
editor_only = false
border_color = Color(0, 0.768627, 1, 1)
border_width = 2.0

[node name="Header" type="ColorRect" parent="."]
offset_top = -30.0
offset_right = 100.0
color = Color(0, 0, 0, 0.705882)

[node name="Label" type="Label" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Map Name"
horizontal_alignment = 1
vertical_alignment = 1
